# binplz.dev

./: .gitignore  LICENSE  README.md  binplz-server.cabal  cabal.project  flake.nix  hie.yaml  stack.yaml
.github/workflows/: CI.yaml  pages.yaml  weekly.yaml
binplz-server/: LICENSE  cabal.project
binplz-server/app/: Main.hs
deploy/: .terraform.lock.hcl  README.md  main.tf  update_dns.py
docs/: LICENSE  book.toml  default.nix
docs/src/: SUMMARY.md  binplz.dev.md  faq.md
nix/: overlay.nix
secrets/: decrypt.sh  encrypt.sh  trustees
secrets/encrypted/: aws_credentials  nixbuild.pem  transip_key.pem
server/: README.md  appdb.sqlite  binplz-server.cabal  hie.yaml
server/app/: Main.hs
server/src/: Lib.hs  Options.hs
src/: Lib.hs
test/: Spec.hs
