cabal-version:   2.4
name:            binplz-server
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE

-- author:          Jonas Carpay
-- maintainer:      Jonas Carpay <jonascarpay@gmail.com>
-- copyright:       2022 Jonas Carpay
-- tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/binplz-server#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/binplz-server.git

common common-options
  build-depends:
    , aeson
    , async
    , base                  >=4.9 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , optparse-applicative
    , process
    , servant-server
    , sqlite-simple
    , text
    , transformers
    , utf8-string
    , warp

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Lib
    Options

  build-depends:

executable binplz-server
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  binplz-server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
